src/App.css
.weather-app {
  text-align: center;
}

@font-face {
  font-family: 'roboto-thin';
  src: url(../public/fonts/Roboto-Thin.ttf);
}

.Title-font {
  font-family: roboto-thin;
  font-weight: bolder;
  font-size: 5vw;
  font-weight: lighter;
  position: absolute;
  left: 35%;
  text-align: center;
  top: 0%;
  color: white;
}
.Location-label {
  font-family: roboto-thin;
  position: absolute;
  font-size: 2vw;
  color: white;
  left: 25%;
  top: 20%;
}

.Textbox {
  font-family: roboto-thin;
  font-size: 2vw;
  color: white;
  width: 12vw;
  position: absolute;
  border: transparent;
  top: 20%;
  left: 49.5%;
  border-color: transparent;
  background-color: transparent;
}
::placeholder {
  color: white;
  border: wrap;
}
.InvisButton {
  background-color: transparent;
  border-color: transparent;
}
.Search {
  position: absolute;
  top: 20%;
  left: 62%;
  width: 3vw;
  height: 3vw;
}
.Location {
  font-family: roboto-thin;
  color: white;
  position: absolute;
  top: 25%;
  left: 25%;
  font-size: 3vw;
  text-align: center;
  width: 50%;
}
.Temperature {
  font-family: roboto-thin;
  color: white;
  position: absolute;
  top: 37%;
  left: 44%;
  font-size: 5vw;
  font-weight: thin;
  text-align: center;
}
.ConditionText {
  font-family: roboto-thin;
  color: white;
  font-size: 3vw;
  position: absolute;
  top: 70%;
  left: 25%;
  right: 44%;
  text-align: center;
  width: 50%;
  text-align: center;
}
.ConditionIcon {
  position: absolute;
  top: 53%;
  left: 45%;
  text-align: center;
  width: 10vw;
  height: 10vw;
}
.TimeText {
  font-family: roboto-thin;
  color: white;
  font-size: 3vw;
  position: absolute;
  top: 77%;
  left: 25%;
  right: 44%;
  text-align: center;
  width: 50%;
  text-align: center;
}

.Initials-font {
  font-family: roboto-thin;
  position: absolute;
  font-weight: bolder;
  left: 90%;
  color: white;
  font-size: 1vw;
}

.Background {
  object-fit: cover;
  filter: blur(7px);
  position: absolute;
  top: 0%;
  left: 0%;
  width: 100%;
  height: 100%;
}

.onHover:hover {
  transform: scale(1.1);
}

@media only screen and (max-width: 900px) {
  .Title-font {
    font-size: 10vw;
    font-family: roboto-thin;
    font-weight: bolder;
    font-weight: lighter;
    position: absolute;
    left: 25%;
    text-align: center;
    top: 0%;
    color: white;
  }
  .Location-label {
    font-family: roboto-thin;
    position: absolute;
    font-size: 4vw;
    color: white;
    left: 20%;
    top: 25%;
  }
  .Textbox {
    font-family: roboto-thin;
    font-size: 4vw;
    color: white;
    width: 12vw;
    position: absolute;
    border: transparent;
    top: 25%;
    left: 67.5%;
    border-color: transparent;
    background-color: transparent;
  }
  .Search {
    position: absolute;
    top: 25%;
    left: 77.5%;
    width: 6vw;
    height: 6vw;
  }
  .Location {
    font-family: roboto-thin;
    color: white;
    position: absolute;
    top: 30%;
    left: 30%;
    font-size: 6vw;
    text-align: center;
    width: 50%;
  }
  .Temperature {
    font-family: roboto-thin;
    color: white;
    position: absolute;
    top: 35%;
    left: 45%;
    font-size: 10vw;
    font-weight: thin;
    text-align: center;
  }
  .ConditionText {
    font-family: roboto-thin;
    color: white;
    font-size: 6vw;
    position: absolute;
    top: 70%;
    left: 30%;
    right: 44%;
    text-align: center;
    width: 50%;
    text-align: center;
  }
  .ConditionIcon {
    position: absolute;
    top: 53%;
    left: 45%;
    text-align: center;
    width: 20vw;
    height: 20vw;
  }
  .TimeText {
    font-family: roboto-thin;
    color: white;
    font-size: 6vw;
    position: absolute;
    top: 87%;
    left: 30%;
    right: 44%;
    text-align: center;
    width: 50%;
    text-align: center;
  }
}

